--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,6 +157,9 @@
     <string name="time">Time</string>
     <string name="reject">Reject</string>
     <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout</string>
+    <string name="are_you_sure_you_want_to_delete_post">Are you sure you want to delete this post?</string>
+    <string name="are_you_sure_you_want_to_report_post">Are you sure you want to report this post?</string>
+    <string name="are_you_sure_you_want_to_report_user">Are you sure you want to report this user?</string>
     <string name="are_you_sure_you_want_to_cancel_requst">Are you sure you want to cancel request</string>
     <string name="are_you_sure_you_want_to_unfriend_user">Are you sure you want to unfann user</string>
     <string name="are_you_sure_you_want_to_complete_service">Are you sure you want to complete this service?</string>
@@ -204,6 +207,20 @@
     <string name="rejected">Rejected</string>
     <string name="request_sent">Request Sent</string>
     <string name="confirm">Confirm</string>
+    <string name="admin">Admin</string>
+    <string name="blocked_by_admin">Blocked by admin</string>
+    <string name="ok">Ok</string>
+    <string name="delete_post">Delete Post</string>
+    <string name="report_user">Report User</string>
+    <string name="report_post">Report Post</string>
+    <string name="service_provider">Service Provider</string>
+    <string name="account_deleted_by_admin">Account has been deleted by admin</string>
+
+
+    <string-array name="colors">
+        <item>blue</item>
+        <item>white</item>
+    </string-array>
 
 
 </resources>
